--- a/App-Movil/app/build.gradle
+++ b/App-Movil/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
+//Google services
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        applicationId "com.jgm.arassistant"
+        applicationId "com.iescampanillas.arassistant"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -25,6 +27,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //Google services
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
