--- a/App-Movil/app/build.gradle
+++ b/App-Movil/app/build.gradle
@@ -28,7 +28,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Google services
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+
+    //Material
+    implementation 'com.google.android.material:material:1.2.0-alpha06'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
