--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-google-services.json
+  
+App-Movil/*.iml
+App-Movil/.gradle
+App-Movil/local.properties
+App-Movil/.idea/caches
+App-Movil/.idea/libraries
+App-Movil/.idea/modules.xml
+App-Movil/.idea/workspace.xml
+App-Movil/.idea/navEditor.xml
+App-Movil/.idea/assetWizardSettings.xml
+App-Movil/.DS_Store
+App-Movil/build
+App-Movil/captures
+App-Movil/.externalNativeBuild
+App-Movil/.cxx
+App-Movil/google-services.json
