--- a/App-Movil/app/build.gradle
+++ b/App-Movil/app/build.gradle
@@ -30,6 +30,8 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.3.0-alpha01"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //Google services
     implementation 'com.google.firebase:firebase-analytics:17.3.0'
@@ -38,7 +40,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha06'
 
     implementation 'com.jakewharton:butterknife:10.2.0'
-    implementation 'com.jakewharton:butterknife-compiler:10.2.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
+
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -47,6 +55,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
 }
