--- a/App-Movil/local.properties
+++ b/App-Movil/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 22 10:09:21 CEST 2020
-sdk.dir=C\:\\Users\\Jorge\\AppData\\Local\\Android\\Sdk
+#Tue May 05 08:40:55 CEST 2020
+sdk.dir=C\:\\Users\\Lino\\AppData\\Local\\Android\\Sdk
