--- a/App-Movil/app/build.gradle
+++ b/App-Movil/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:10.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
     implementation "androidx.navigation:navigation-fragment:$nav_version"
