--- a/App-Movil/app/src/main/AndroidManifest.xml
+++ b/App-Movil/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.iescampanillas.arassistant">
+    <!-- Gallery -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Calendar -->
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.TaskActivity"></activity>
+        <activity android:name=".activity.ReminderActivity"></activity>
+        <activity android:name=".activity.TaskActivity" />
         <activity android:name=".activity.ConnectActivity" />
         <activity android:name=".activity.ProfileActivity" />
         <activity android:name=".activity.RegisterActivity" />
