--- a/App-Movil/app/build.gradle
+++ b/App-Movil/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     //Material
     implementation 'com.google.android.material:material:1.2.0-alpha06'
 
+    //Calendar
+    implementation 'com.applandeo:material-calendar-view:1.7.0'
+
     implementation 'com.jakewharton:butterknife:10.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
