--- a/App-Movil/local.properties
+++ b/App-Movil/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu May 07 10:05:47 CEST 2020
-sdk.dir=C\:\\Users\\Jorge\\AppData\\Local\\Android\\Sdk
+#Thu Sep 17 12:32:29 CEST 2020
+sdk.dir=C\:\\Users\\Jorge Garcia Molina\\AppData\\Local\\Android\\Sdk
